--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "check-node-version": "check-node-version --npm 10.5.0",
     "test": "npm run eslint",
+    "test:lint": "mocha tests/*",
     "release": "standard-version",
     "commitlint": "commitlint --from ee3b407",
     "eslint": "eslint .",
@@ -41,8 +42,10 @@
   "devDependencies": {
     "@silvermine/standardization": "2.0.0",
     "@types/eslint__js": "8.42.3",
+    "chai": "5.1.2",
     "cz-conventional-changelog": "3.0.2",
     "eslint": "8.57.0",
+    "mocha": "11.1.0",
     "standard-version": "7.0.1",
     "typescript": "4.7.4"
   },
